--- a/Web/CookIt.Web/Views/Shared/_Layout.cshtml
+++ b/Web/CookIt.Web/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         <link href="~/css/site.css" rel="stylesheet" asp-append-version="true">
         <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/responsive.css" rel="stylesheet" asp-append-version="true">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" asp-append-version="true">
 
     </environment>
     <environment names="Staging,Production">
@@ -27,7 +27,7 @@
         <link href="~/css/site.css" rel="stylesheet" asp-append-version="true">
         <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/responsive.css" rel="stylesheet" asp-append-version="true">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"  asp-append-version="true">
     </environment>
 </head>
 <body>
@@ -37,10 +37,12 @@
                 <div class="col-lg-3">
                     <div class="top_header_left">
                         <div class="input-group mt-5">
-                            <input type="text" class="form-control" placeholder="Search" aria-label="Search">
-                            <span class="input-group-btn">
-                                <button class="btn btn-secondary" type="button"><i class="icon-magnifier"></i></button>
-                            </span>
+                            <form method="post">
+                                <input name="search" type="text" class="form-control" placeholder="Search" aria-label="Search">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-secondary" type="submit" asp-action="Index" asp-controller="Home"><i class="icon-magnifier"></i></button>
+                                </span>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -98,10 +100,7 @@
             <nav class="navbar navbar-expand-lg navbar-collapse collapse">
                 <div class="navbar-collapse collapse d-lg-inline-flex" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Orders" asp-action="MyOrders">My Orders</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
                     </ul>
