Added Library for the Binding Models and separated them from the view models.Minor fixes.

--- a/Web/CookIt.Web/Areas/Administration/Views/Ingredients/CreateIngredient.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Ingredients/CreateIngredient.cshtml
@@ -1,4 +1,4 @@
-﻿@model CookIt.Web.ViewModels.Ingridient.IngredientBindingModel
+﻿@model CookIt.Web.BindingModels.Ingredient.IngredientBindingModel
 @{
     this.ViewData["Title"] = "Create Ingredient";
 
