--- a/Web/CookIt.Web/Areas/Administration/Views/Ingredients/CreateIngredientType.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Ingredients/CreateIngredientType.cshtml
@@ -1,4 +1,4 @@
-﻿@model  CookIt.Web.ViewModels.Ingridient.IngredientTypeBindingModel
+﻿@model CookIt.Web.BindingModels.Ingredient.IngredientTypeBindingModel
 @{
     this.ViewData["Title"] = "Create Ingredient Type";
 
