--- a/Web/CookIt.Web/Areas/Administration/Views/Recipes/CreateRecipe.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Recipes/CreateRecipe.cshtml
@@ -1,4 +1,4 @@
-﻿@model CookIt.Web.ViewModels.Recipe.RecipeModel
+﻿@model CookIt.Web.BindingModels.Recipe.RecipeModel
 @{
     this.ViewData["Title"] = "Create Recipe";
     int numberOfIgredients = Model.InputModel?.Ingredients.Count ?? 1;
