--- a/Web/CookIt.Web/Areas/Administration/Views/Recipes/Edit.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Recipes/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CookIt.Web.ViewModels.Recipe.RecipeEditBaseModel
+﻿@model CookIt.Web.BindingModels.Recipe.RecipeEditBaseModel
 @{
     ViewData["Title"] = "Edit Recipe";
     int numberOfIgredients = Model.InputModel?.Ingredients.Count ?? 1;
