--- a/Web/CookIt.Web/Views/Orders/Checkout.cshtml
+++ b/Web/CookIt.Web/Views/Orders/Checkout.cshtml
@@ -1,4 +1,4 @@
-﻿@model CookIt.Web.ViewModels.Order.CheckoutInputModel
+﻿@model CookIt.Web.BindingModels.Order.CheckoutBindingModel
 
 @{
     ViewData["Title"] = "Checkout";
