--- a/Web/CookIt.Web/Views/_ViewImports.cshtml
+++ b/Web/CookIt.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using CookIt.Web
 @using CookIt.Web.ViewModels
+@using CookIt.Web.BindingModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, CookIt.Web
 @addTagHelper *, CookIt.Web.Infrastructure
