--- a/Web/CookIt.Web/Views/Orders/MyOrders.cshtml
+++ b/Web/CookIt.Web/Views/Orders/MyOrders.cshtml
@@ -115,7 +115,7 @@
                             </tr>
                         </thead>
                         <tbody style="background:white">
-                            @for (int i = 0; i < activeOrders.Count; i++)
+                            @for (int i = 0; i < finishedOrders.Count; i++)
                             {
                                 <tr class="text-center">
                                     <th scope="row">@(i + 1)</th>
