--- a/Web/CookIt.Web/Views/Home/Index.cshtml
+++ b/Web/CookIt.Web/Views/Home/Index.cshtml
@@ -53,9 +53,9 @@
                     <div class="col-md-3 mt-3 empty"></div>
                 }
             }
-            @if (Model.Count == 0)
+            @if (Model.Count == 0 && searchWord != null)
             {
-                <div class="alert alert-primary col-md-12 centered mt-3" role="alert">
+                <div class="alert alert-primary col-md-12 centered mt-3 ml-3" role="alert">
                     No recipes found for this search: "@searchWord"
                 </div>
             }
