--- a/Web/CookIt.Web/Areas/Administration/Views/Recipes/AllRecipes.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Recipes/AllRecipes.cshtml
@@ -13,7 +13,7 @@
 {
     <div class="col-md-12 pt-2">
         <div class="alert alert-dark" role="alert">
-            There are no ingredients added.
+            There are no recipes added.
         </div>
     </div>
 }
